tests/object_method/object_method.exp
Error ---------------------------------------------------------------------------------------------------- spread.js:4:3

Cannot assign function to `x.m` because property `m` is not writable. [cannot-write]

   4| x.m = () => {}; // error: m is read-only
        ^


Error ---------------------------------------------------------------------------------------------------- spread.js:7:4

Cannot assign function to `x2.m` because property `m` is not writable. [cannot-write]

   7| x2.m = () => {}; // error: m is read-only
         ^


Error --------------------------------------------------------------------------------------------------- spread.js:10:3

Cannot assign function to `y.m` because property `m` is not writable. [cannot-write]

   10| y.m = () => {}; // error: m is read-only
         ^


Error --------------------------------------------------------------------------------------------------- spread.js:13:3

Cannot assign function to `z.m` because property `m` is not writable. [cannot-write]

   13| z.m = () => {}; // error: m is read-only
         ^


Error ---------------------------------------------------------------------------------------------------- test2.js:17:1

Cannot call `b.f` because property `p` is missing in object literal [1] but exists in object type [2]. [prop-missing]

   test2.js:17:1
   17| b.f(); // error, property `p` not found
       ^

References:
   test2.js:12:9
               v
   12| var b = {
   13|   f
   14| }
       ^ [1]
   test2.js:3:18
    3| function f(this: {p: mixed}) {
                        ^^^^^^^^^^ [2]



Found 5 errors
